include/spark/scripting/SparkInterop.h

typedef struct SparkGameComponent SparkGameComponent;
SPARK_SCRIPT_API void spark_sprite_2d_fsm_request_hurt(SparkGameComponent* fsm);
SPARK_SCRIPT_API void spark_sprite_2d_fsm_request_attack(SparkGameComponent* fsm);
/* --- 3D character animation FSM --- */
SPARK_SCRIPT_API void spark_char_3d_fsm_set_locomotion_clips(
        SparkGameComponent* fsm,
        uint32_t idleClipIndex,
        uint32_t walkClipIndex,
        uint32_t runClipIndex);
SPARK_SCRIPT_API void spark_char_3d_fsm_configure_locomotion_from_skeleton(
        SparkGameComponent* fsm,
        const SparkGameComponent* animator,
        uint32_t walkClipFallback);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_attack_clip(SparkGameComponent* fsm, uint32_t attackClipIndex);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_walk_speed_threshold(SparkGameComponent* fsm, float metersPerSecond);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_run_speed_threshold(SparkGameComponent* fsm, float metersPerSecond);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_crossfade_duration(SparkGameComponent* fsm, float seconds);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_locomotion_driving_enabled(SparkGameComponent* fsm, int enabled);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_locomotion_input(SparkGameComponent* fsm, int moving, int sprint);
SPARK_SCRIPT_API void spark_char_3d_fsm_set_manual_clip(
        SparkGameComponent* fsm,
        uint32_t clipIndex,
        uint32_t loopMode);
SPARK_SCRIPT_API void spark_char_3d_fsm_clear_manual_clip(SparkGameComponent* fsm);
SPARK_SCRIPT_API void spark_char_3d_fsm_request_attack(SparkGameComponent* fsm);
/* --- Particle emitter (subset) --- */
SPARK_SCRIPT_API void spark_particle_emitter_set_enabled(SparkGameComponent* emitter, int enabled);
SPARK_SCRIPT_API void spark_particle_emitter_set_rate(SparkGameComponent* emitter, float particlesPerSecond);
SPARK_SCRIPT_API void spark_particle_emitter_set_max_particles(SparkGameComponent* emitter, int maxParticles);