scripting/bindings/generated/Spark.Bindings/Native.g.cs


        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_request_hurt(SparkGameComponent* fsm);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_request_attack(SparkGameComponent* fsm);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_locomotion_clips(SparkGameComponent* fsm, [NativeTypeName("uint32_t")] uint idleClipIndex, [NativeTypeName("uint32_t")] uint walkClipIndex, [NativeTypeName("uint32_t")] uint runClipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_configure_locomotion_from_skeleton(SparkGameComponent* fsm, [NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint walkClipFallback);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_attack_clip(SparkGameComponent* fsm, [NativeTypeName("uint32_t")] uint attackClipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_walk_speed_threshold(SparkGameComponent* fsm, float metersPerSecond);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_run_speed_threshold(SparkGameComponent* fsm, float metersPerSecond);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_crossfade_duration(SparkGameComponent* fsm, float seconds);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_locomotion_driving_enabled(SparkGameComponent* fsm, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_locomotion_input(SparkGameComponent* fsm, int moving, int sprint);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_set_manual_clip(SparkGameComponent* fsm, [NativeTypeName("uint32_t")] uint clipIndex, [NativeTypeName("uint32_t")] uint loopMode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_clear_manual_clip(SparkGameComponent* fsm);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_char_3d_fsm_request_attack(SparkGameComponent* fsm);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_particle_emitter_set_enabled(SparkGameComponent* emitter, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_particle_emitter_set_rate(SparkGameComponent* emitter, float particlesPerSecond);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_particle_emitter_set_max_particles(SparkGameComponent* emitter, int maxParticles);
    }
}
